# PoCMLOps

./: .gitignore  Dockerfile.base  README.md  config_dvc.sh  dvc.yaml  metrics.json  model.pkl  pyproject.toml  run_docker_compose.sh  tmp.sh
.dvc/: config
.github/workflows/: ci.yml
data/processed/: train.parquet
data/raw/: sample_data.csv
infra/: .env  docker-compose.yml  mlflow-docker-compose.yml
infra/monitoring/grafana/provisioning/dashboards/: mlops_dashboard.json
infra/monitoring/prometheus/: alert.rules.yml  prometheus.yml
src/: __init__.py
src/edge/: Dockerfile
src/etl/: data_processing.py
src/serve/: .env  Dockerfile  main.py
src/serve/api/: inference_api.py
src/serve/api/message_config/prediction_messages/: __init__.py  prediction_request.py  prediction_response.py
src/serve/logger/: prometheus_logger.py
src/serve/repository/: mlflow_repository.py
src/serve/service/: mlflow_model_service.py  prediction_service.py
src/train/: train.py
