[project]
name = "ml_ops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
api = [
    "fastapi[standard]>=0.138.0",
    "mlflow>=3.14.0",
    "prometheus-client>=0.25.0",
    "python-dotenv>=1.2.2",
    "torch>=2.12.1",
    "uvicorn[standard]>=0.49.0",
]
etl = [
    "py4j>=0.10.9.9",
    "pyspark>=4.1.2",
]
model = [
    "mlflow>=3.14.0",
    "pandas>=2.3.3",
    "torch>=2.12.1",
]
monitoring = [
    "boto3>=1.43.34",
    "evidently>=0.7.21",
    "mlflow>=3.14.0",
]
